fixed cookie on mobile and fixed text on currency button

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -24,6 +24,34 @@ html {
 	max-width: 1200px;
 }
 
+.cookie__box {
+	position: fixed;
+	bottom: 0;
+	padding: 2em 2em;
+	height: 30vh;
+	width: 100%;
+	text-align: center;
+	font-size: 2rem;
+	background-color: $main;
+	opacity: 0;
+	transform: translateY(100%);
+	z-index: 1000;
+	animation: show-cookies 0.5s 0.5s forwards;
+
+	&-btn {
+		margin-top: 1em;
+		padding: 0.5em 1em;
+		font-size: 1.6rem;
+		border-radius: 8px;
+		color: $main;
+		background-color: $dark;
+
+		&::before {
+			background-color: $gold;
+		}
+	}
+}
+
 .link-animation {
 	position: relative;
 	display: inline-block;
@@ -695,6 +723,10 @@ html {
 	color: $gold;
 }
 
+.hide {
+	display: none;
+}
+
 // ---MEDIA---
 
 @media (max-width: 767px) {
@@ -705,6 +737,11 @@ html {
 
 // 576
 @media (min-width: 576px) {
+
+	.cookie__box {
+		height: 20vh;
+	}
+
 	.nav {
 		&__logo {
 			font-size: 2.6rem;
@@ -826,36 +863,8 @@ html {
 		font-size: 5.5rem;
 	}
 
-	.hide {
-		display: none;
-	}
-
 	.cookie__box {
-		position: fixed;
-		bottom: 0;
-		padding: 2em;
 		height: 20vh;
-		width: 100%;
-		text-align: center;
-		font-size: 2rem;
-		background-color: $main;
-		opacity: 0;
-		transform: translateY(100%);
-		z-index: 1000;
-		animation: show-cookies 0.5s 0.5s forwards;
-
-		&-btn {
-			margin-top: 1em;
-			padding: 0.5em 1em;
-			font-size: 1.6rem;
-			border-radius: 8px;
-			color: $main;
-			background-color: $dark;
-
-			&::before {
-				background-color: $gold;
-			}
-		}
 	}
 
 	.footer {
